# vicaya

./: .gitignore  .releaserc.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  codecov.yml  lefthook.yml  package-lock.json  package.json  release-please-config.json  release.toml
.cargo-husky/hooks/: pre-push
.claude/automations/: test_vicaya_tui_core_visual.py  test_vicaya_tui_scope_navigation.py  test_vicaya_tui_startup_scope.py  test_vicaya_tui_utf8_input.py  vicaya_iterm2_utils.py
.github/workflows/: ci.yml  pages.yml  pr-release-cleanup.yml  pr-release.yml  release-prepare.yml  release.yml  semantic-release.yml
.shux/scripts/: content-search-visual.sh  smriti-visual.sh
config/: default.toml
crates/vicaya-cli/: Cargo.toml
crates/vicaya-cli/src/: ipc_client.rs  main.rs  metrics.rs  upgrade.rs
crates/vicaya-cli/tests/: cli_operational_flows.rs  ranking_cli_smoke.rs  scope_cli_smoke.rs
crates/vicaya-core/: Cargo.toml  build.rs
crates/vicaya-core/src/: build_info.rs  config.rs  content_search.rs  daemon.rs  error.rs  filter.rs  ipc.rs  lib.rs  logging.rs  paths.rs  smriti.rs
crates/vicaya-core/tests/: daemon_lifecycle.rs
crates/vicaya-daemon/: Cargo.toml
crates/vicaya-daemon/src/: ipc_server.rs  main.rs
crates/vicaya-daemon/tests/: filter_scope.rs  ipc_large_response.rs  startup_reconcile.rs
crates/vicaya-index/: Cargo.toml
crates/vicaya-index/src/: abbreviation.rs  file_table.rs  lib.rs  query.rs  string_arena.rs  trigram.rs
crates/vicaya-index/tests/: ranking_corpus.rs  ranking_metrics.rs  ranking_regression.rs
crates/vicaya-index/tests/support/: mod.rs
crates/vicaya-scanner/: Cargo.toml
crates/vicaya-scanner/src/: lib.rs
crates/vicaya-scanner/tests/: search_correctness.rs
crates/vicaya-tui/: Cargo.toml
crates/vicaya-tui/src/: app.rs  kriya.rs  lib.rs  main.rs  worker.rs
crates/vicaya-tui/src/client/: mod.rs
crates/vicaya-tui/src/state/: mod.rs
crates/vicaya-tui/src/ui/: footer.rs  header.rs  layout.rs  mod.rs  overlays.rs  preview.rs  results.rs  search_input.rs  theme.rs
crates/vicaya-watcher/: Cargo.toml
crates/vicaya-watcher/src/: lib.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  LEARNINGS.md  abbreviation-matching-plan.md  improve-search-ranking-plan.md  vicaya-tui-plan.md  vicaya.md
docs/tasks/: 000-parallel-remediation-plan.md  001-issue-15-ipc-bounded-reads.md  002-issue-16-move-overwrite-index-integrity.md  003-issue-17-tui-utf8-input.md  004-issue-18-default-exclusion-normalization.md  005-issue-19-watcher-rename-both-hardening.md  006-issue-20-fresh-build-journal-replay.md  007-issue-21-short-query-ranking.md  008-issue-30-startup-scope-cli-tui.md  009-content-search-drishti.md
scripts/: build-release.sh  set-version.sh  smriti-hyperfine.sh
scripts/release/: make-universal.sh  package-pkg.sh  package-tar.sh
site/: index.html  styles.css  version.json
