[workspace]
members = [
    "crates/vicaya-core",
    "crates/vicaya-index",
    "crates/vicaya-scanner",
    "crates/vicaya-watcher",
    "crates/vicaya-daemon",
    "crates/vicaya-cli",
    "crates/vicaya-tui",
]
resolver = "2"

[workspace.package]
version = "1.0.1"
edition = "2021"
authors = ["vicaya contributors"]
license = "Apache-2.0"
repository = "https://github.com/indrasvat/vicaya"

[workspace.dependencies]
# Shared dependencies across all crates
clap = { version = "4.5", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
hashbrown = { version = "0.14", features = ["serde"] }
memmap2 = "0.9"
rayon = "1.10"
ignore = "0.4"
walkdir = "2.5"
notify = "6.1"
bincode = "1.3"
anyhow = "1.0"
thiserror = "1.0"
chrono = "0.4"
criterion = "0.5"
tempfile = "3.8"
shellexpand = "3.1"
libc = "0.2"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
