[package]
name = "vicaya-index"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vicaya-core = { path = "../vicaya-core" }
tracing = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
hashbrown = { workspace = true }
memmap2 = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
