[package]
name = "vicaya-scanner"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vicaya-core = { path = "../vicaya-core" }
vicaya-index = { path = "../vicaya-index" }
tracing = { workspace = true }
rayon = { workspace = true }
ignore = { workspace = true }
walkdir = { workspace = true }
anyhow = { workspace = true }
chrono = { workspace = true }
bincode = { workspace = true }
