[package]
name = "vicaya-watcher"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vicaya-core = { path = "../vicaya-core" }
vicaya-index = { path = "../vicaya-index" }
tracing = { workspace = true }
notify = { workspace = true }
anyhow = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
